@@ -1,4 +1,4 @@
 #!/usr/bin/env python
 # -*- coding: utf-8 -*-
-__version__ = "2.5.0"
+__version__ = "2.6.0"
 __author__ = "Chris Griffith"
