@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "fastflix"
-version = "2.5.0"
+version = "2.6.0"
 description = "Easy to use video encoder GUI wrapper"
 authors = ["Chris Griffith <chris@cdgriffith.com>"]
 license = "MIT"
