@@ -1,8 +1,9 @@
 appdirs
 colorama
 coloredlogs
-pyside2
 python-box
 requests
 reusables
 ruamel.yaml
+pyqt5
+qtpy
