@@ -7,6 +7,9 @@ Version 2.6.0
 * Adding AV1 AOM settings for cpu-used, tile-columns, tile-rows, row-mt
 * Adding HEVC x265 setting for profile
 * Changing plugins to include library used for encoding
+* Changing HEVC default speed to "medium" and crf to 28 to match x265 defaults
+* Changing command builders to specify stream instead of video track for codec
+* Fixing FPS not showing correctly when dealing with higher numbers
 
 Version 2.5.0
 ~~~~~~~~~~~~~
